--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
 
             <div class="col-12 col-xl-3 col-lg-4 col-sm-6">
-                <a href="/BlockBasedProgMakeCodeAI">
+                <a href="/BlockBasedProgMakeCodeAl/">
                     <div class="learnbox mt-4" style=" background-color:darkcyan">
 
                         <h5 class="learnbox-title mt-2 white text-uppercase">
@@ -115,7 +115,7 @@
                 </a>
             </div>
             <div class="col-12 col-xl-3 col-lg-4 col-sm-6">
-                <a href="/BlockBasedProgScratch">
+                <a href="/BlockBasedProgScratch/">
                     <div class="learnbox mt-4" style="background-color:darkcyan">
                         <h5 class="learnbox-title mt-2 white text-uppercase">
                             Block-based Programming in Scratch
@@ -135,7 +135,7 @@
                 </div>
             </div>
             <div class="col-12 col-xl-3 col-lg-4 col-sm-6">
-                <a href="/TxtProgInPythonAI">
+                <a href="/TxtProgInPythonAl/">
                     <div class="learnbox  mt-4" style="background-color:darkcyan">
 
                         <h5 class="learnbox-title mt-2 white text-uppercase">Textual Programming in Python</h5>
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <div class="col-12 col-xl-3 col-lg-4 col-sm-6">
-                <a href="/JupyterBookAI">
+                <a href="/JupyterBookAl/">
                     <div class="learnbox mt-4" style="background-color:darkcyan">
 
                         <h5 class="learnbox-title mt-2 white text-uppercase">Introduction to Data Analisys</h5>
