--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
        <div>
            <p>
 
-               Ideja pas programit <a href=" https://gen-d.buzz/"><font color="#20c997">"Gen-D – Nurturing a Digital Future"</font></a> është të kontribuojë në transformimin dixhital në arsim duke krijuar materiale mësimore për programim, të hartuar nga fondacioni Petlja.
-                Organizatat partnere nga Shqipëria, Bosnja dhe Hercegovina, Bullgaria, Kroacia dhe Serbia do të punojnë në lokalizimin e materialeve të ofruara në mënyrë që të mbështesin dhe përmirësojnë standardet arsimore në vendet e tyre përkatëse. <br />
-                Fondacioni Petlja është një nga partnerët në projektin e zbatuar nga <a href=" https://www.propulsion.one/"><font color="#20c997">Propulsion</a></font> sponsporizuar nga <a href="https://www.microsoft.com/en-us/corporate-responsibility/philanthropies"><font color="#20c997">Microsoft</font></a> përmes programmit Microsoft Philanthropies<br /><br />
+                Ideja pas programit <a href=" https://gen-d.buzz/"><font color="#20c997">"Gen-D – Nurturing a Digital Future"</font></a> është të kontribuojë në transformimin dixhital në arsim duke krijuar materiale mësimore për programim, të hartuar nga fondacioni Petlja.
+                Organizatat partnere nga Shqipëria, Bosnja dhe Hercegovina, Bullgaria, Kroacia dhe Serbia do të punojnë në lokalizimin e materialeve të ofruara në mënyrë që të mbështesin dhe përmirësojnë standardet arsimore në vendet e tyre përkatëse.
+                Fondacioni Petlja është një nga partnerët në projektin e zbatuar nga <a href=" https://www.propulsion.one/"><font color="#20c997">Propulsion</a></font> sponsporizuar nga <a href="https://www.microsoft.com/en-us/corporate-responsibility/philanthropies"><font color="#20c997">Microsoft</font></a> përmes programmit Microsoft Philanthropies<br />
 
-                Ekipi i autorëve nga fondacioni Petlja krijoi materiale mësimore interaktive për
-                programim, i ndarë në tre nivele: <br /> <br />
+                Ekipi i autorëve nga fondacioni Petlja krijoi materiale mësimore interaktive për programim, i ndarë në tre nivele: <br /> <br />
+
                 ● Niveli 1 - Niveli i parë është një prezantim në programimin bllok me ndihmën e Micro:bit, Lego EV3
                 Robotët Mindstorm dhe Minecraft, si dhe materialet gjuhësore të programimit Scratch <br /> <br />
                 ● Niveli 2 - Niveli i dytë paraqet kalimin në programimin tekstual në programimin Python
-                gjuhë dhe mësuar grafika dhe animacion 2D duke përdorur bibliotekën Pygame. <br /> <br />
+                 dhe misimi i  grafikave dhe animacion 2D duke përdorur bibliotekën Pygame. <br /> <br />
                 ● Niveli 3 - Niveli i tretë i kushtohet analizës dhe paraqitjes së të dhënave duke përdorur Jupyter dhe Python.
            </p>
            <br />
@@ -155,7 +155,7 @@
                 <a href="/JupyterBookAl/">
                     <div class="learnbox mt-4" style="background-color:darkcyan">
 
-                        <h5 class="learnbox-title mt-2 white text-uppercase">Prezantim në Ananlizë të dhënash</h5>
+                        <h5 class="learnbox-title mt-2 white text-uppercase">Prezantim në Analizë të dhënash</h5>
                         <img src="images/jupyther.png" alt="#" width="100%" height="auto">
 
                     </div>
